--- a/SunShineList_dummy.ipynb
+++ b/SunShineList_dummy.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "#import dependencies\n",
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -32,7 +32,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "e55b0ff6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#File to load 2020\n",
+    "# sunshine_2020_to_load=\"2021_SunshineTest.csv\"\n",
+    "\n",
+    "# https://files.ontario.ca/pssd/2020/tbs-pssd-compendium-2020-en-utf-8-2022-01-10.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c63b8c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge all 3 files above into 1 DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "0645db3f",
    "metadata": {},
    "outputs": [
@@ -150,13 +173,14 @@
        "4                       President           1996  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 1. Create a DataFrame for the 201908-citibike-tripdata data. \n",
+    "# sunshine_data_df = pd.read_csv(sunshine_data_to_load)\n",
     "sunshine_data_df = pd.read_csv(sunshine_data_to_load)\n",
     "\n",
     "#display the data table for preview\n",
@@ -165,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "383d7b2c",
    "metadata": {},
    "outputs": [
@@ -198,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "152ad5a1",
    "metadata": {},
    "outputs": [
@@ -225,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "12a3be8c",
    "metadata": {},
    "outputs": [],
@@ -236,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "05100db8",
    "metadata": {},
    "outputs": [
@@ -263,12 +287,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "46eb5f05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            robert\n",
+       "1          raymonde\n",
+       "2            philip\n",
+       "3            robert\n",
+       "4             glenn\n",
+       "             ...   \n",
+       "1470701     georg r\n",
+       "1470702     michael\n",
+       "1470703      peer c\n",
+       "1470704      detlev\n",
+       "1470705        joel\n",
+       "Name: First Name, Length: 1470703, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sunshine_data_df['First Name'].str.lower()  ## for consolidated 1996 to 2019\n",
+    "sunshine_data_df['First Name'].str.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e855d1be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sunshine_data_df['First Name'].str.lower()"
+    "#Change Salary to numeric\n",
+    "# Use pd.to_numeric() method to convert the datatype of the Amount column\n",
+    "# df['Amount'] = pd.to_numeric(df['Amount'])\n",
+    "sunshine_data_df['Salary'] = sunshine_data_df['Salary'].astype(str). astype(int)"
    ]
   },
   {
@@ -281,19 +341,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "2001c64c",
+   "execution_count": null,
+   "id": "2e75a707",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display an overview of the First Name column...view with all lower case\n",
-    "# Do a count on all first names\n",
-    "first_count=sunshine_data_df['First Name'].str.lower().value_counts()"
+    "#Create an Original First Name column\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
+   "id": "2001c64c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "david        27551\n",
+       "john         26541\n",
+       "michael      26074\n",
+       "robert       21602\n",
+       "paul         16261\n",
+       "             ...  \n",
+       "olu              1\n",
+       "jl               1\n",
+       "lise-anne        1\n",
+       "shems            1\n",
+       "arda             1\n",
+       "Name: First Name, Length: 62548, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display an overview of the First Name column...view with all lower case\n",
+    "# Do a count on all first names\n",
+    "# first_count=sunshine_data_df['First Name'].str.lower().value_counts()\n",
+    "first_count=sunshine_data_df['First Name'].str.lower().value_counts()\n",
+    "first_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "8916595a",
    "metadata": {},
    "outputs": [
@@ -342,50 +437,105 @@
        "      <th>paul</th>\n",
        "      <td>16261</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>olu</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>jl</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lise-anne</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>shems</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>arda</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>62548 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         first_name_counts\n",
-       "david                27551\n",
-       "john                 26541\n",
-       "michael              26074\n",
-       "robert               21602\n",
-       "paul                 16261"
+       "           first_name_counts\n",
+       "david                  27551\n",
+       "john                   26541\n",
+       "michael                26074\n",
+       "robert                 21602\n",
+       "paul                   16261\n",
+       "...                      ...\n",
+       "olu                        1\n",
+       "jl                         1\n",
+       "lise-anne                  1\n",
+       "shems                      1\n",
+       "arda                       1\n",
+       "\n",
+       "[62548 rows x 1 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Creating a new DataFrame using both duration and count\n",
+    "# urban_ride_count=urban_cities_df.groupby([\"city\"]).count()[\"ride_id\"]\n",
+    "# first_name_count=sunshine_data_df.groupby([\"First Name\"]).count()[\"First Name\"]\n",
     "first_name_table = pd.DataFrame({\"first_name_counts\": first_count})\n",
-    "first_name_table.head()"
+    "first_name_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
+   "id": "2f1fb8c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Copy First Name column and create a Clean_first_name columns 1 and 2#### figure out code to copy an entire column\n",
+    "sunshine_data_df.insert(2,\"first_name_clean_1\", str, allow_duplicates=False)\n",
+    "sunshine_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d977cdc8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'None of [0] are in the columns'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-30-ce837a918e3a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfirst_name_table\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36mset_index\u001b[1;34m(self, keys, drop, append, inplace, verify_integrity)\u001b[0m\n\u001b[0;32m   4725\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4726\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmissing\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4727\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"None of {missing} are in the columns\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4728\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4729\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'None of [0] are in the columns'"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "# Review first name character count to clean all 1st names with initials only, first name with initials etc.\n",
+    "#1) where 1 letter, make separate df for cleansing - use history with last name + first initial( + job title) to correct for first name\n",
+    "#2) where 2 letters, review for valid first name Example Ed, add to separate df for cleansing usig above logic to correct where possible\n",
+    "#3) where letter followed with \".\", add to separate df for cleansing usig above logic to correct where possible"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a640949",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Cleaning First Name with titles and Replacing Substrings in a Python String\n",
+    "# # Add each prefix and suffix to remove to a list.\n",
+    "prefixes_suffixes = [\"dr. \", \"dr \",\"-\", \"jr. \",\".\", \"ms. \", \"md. \", \"mr. \", \"(dr)\", \"(\", \")\"]\n",
+    "\n",
+    "# # Iterate through the words in the \"prefixes_suffixes\" list and replace them with an empty space, \"\".\n",
+    "for word in prefixes_suffixes:\n",
+    "    sunshine_data_df[\"First Name\"] = sunshine_data_df[\"First Name\"].str.replace(word,\"\")\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -425,8 +575,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create LastName_FirstName concatenation column\n",
-    "sunshine_data_df[\"Last_First_Name\"]=sunshine_data_df[\"Last Name\"]+\"_\"+sunshine_data_df[\"First Name\"]\n",
+    "#Create LastName_FirstName concatenation column ## changed to match 2020 csv\n",
+    "sunshine_data_df[\"Last_First_Name\"]=sunshine_data_df[\"Last name\"]+\"_\"+sunshine_data_df[\"First name\"]\n",
     "sunshine_data_df.head()"
    ]
   },
@@ -438,7 +588,7 @@
    "outputs": [],
    "source": [
     "#review job_title\n",
-    "job_titlee=sunshine_data_df['Job Title'].unique().tolist()\n",
+    "job_title=sunshine_data_df['Job Title'].unique().tolist()\n",
     "job_title"
    ]
   },
@@ -508,7 +658,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#reorder and rename columns\n"
+    "# Reorder the columns in the sunshine_data DataFrame.\n",
+    "sunshine_data_df = sunshine_data_df.reindex(columns=['Calendar Year','Sector' ,'employer', 'Job title','Last_First_Name', 'Last Name', 'First name', 'first_name_clean','Salary', 'Benefits'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a87ccfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename the columns in the sunshine_data DataFrame.### changed to match 2020 data\n",
+    "sunshine_data_df.rename({'Calendar Year':'year',\n",
+    "                      'Sector':'sector',\n",
+    "                      'Employer': 'employer',\n",
+    "                      'Job title':'job_title',\n",
+    "                      'Last_First_Name':'last_first_name',\n",
+    "                      'Last Name': 'last_name',\n",
+    "                      'First name':'first_name',\n",
+    "                      'first_name_clean':'first_name_clean',\n",
+    "                      'Last_First_Name':'last_first_name',\n",
+    "                      'Salary':'salary_paid',\n",
+    "                      'Benefits':'taxable_benefits'\n",
+    "                    }, axis='columns', inplace=True)"
    ]
   },
   {
@@ -518,17 +691,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Export to csv \n",
     "sunshine_data_df.to_csv(\"Clean_SunShine.csv\")\n",
     "sunshine_data_df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8caac91",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
