Adding Ontario Wages dummy ipynb

--- a/Ontario_Wages_dummy.ipynb
+++ b/Ontario_Wages_dummy.ipynb
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "fa92aa22",
    "metadata": {},
    "outputs": [],
@@ -1700,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "7ce644e2",
    "metadata": {},
    "outputs": [],
@@ -1720,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "abba84de",
    "metadata": {},
    "outputs": [],
@@ -1738,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "75a11da5",
    "metadata": {},
    "outputs": [
@@ -1843,20 +1843,20 @@
        "4  Males  25 to 54 years      1427.36  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Export to csv \n",
-    "Ontario_Wages.to_csv(\"Clean_Ontario_Wages.csv\")\n",
+    "Ontario_Wages.to_csv(\"Clean_Ontario_Wages.csv\", index=False)\n",
     "Ontario_Wages.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "2f88541d",
    "metadata": {},
    "outputs": [
@@ -1873,7 +1873,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
