added city column

--- a/SunshineList_dummy_for_import.ipynb
+++ b/SunshineList_dummy_for_import.ipynb
@@ -1039,6 +1039,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4e1a1308",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #TO DO - pending decision if we want to attempt identifying city location by employer column\n",
+    "\n",
+    "# #Create City column\n",
+    "# sunshine_data_df[\"city\"] = None"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "id": "38ae0ac2",
    "metadata": {},
