adding future city column to sunshine table

--- a/SunshineList_dummy_for_import.ipynb
+++ b/SunshineList_dummy_for_import.ipynb
@@ -19,7 +19,7 @@
     "#import dependencies\n",
     "import pandas as pd\n",
     "import re\n",
-    "import numpy as np"
+    "# import numpy as np"
    ]
   },
   {
@@ -292,17 +292,17 @@
     {
      "data": {
       "text/plain": [
-       "Municipalities and Services                   272130\n",
-       "Universities                                  239373\n",
-       "School Boards                                 188239\n",
-       "Hospitals and Boards of Public Health         118189\n",
-       "Hydro One and Ontario Power Generation        113612\n",
-       "                                               ...  \n",
-       "Seconded (Ministry of Labour)*                     1\n",
-       "Other Public Sector Employers                      1\n",
-       "Seconded (Transportation)*                         1\n",
-       "Seconded (Economic Development & Trade)*           1\n",
-       "Seconded (Economic Development and Trade)*         1\n",
+       "Municipalities and Services                        272130\n",
+       "Universities                                       239373\n",
+       "School Boards                                      188239\n",
+       "Hospitals and Boards of Public Health              118189\n",
+       "Hydro One and Ontario Power Generation             113612\n",
+       "                                                    ...  \n",
+       "Seconded (Research and Innovation)*                     1\n",
+       "Seconded (Children and Youth Services)                  1\n",
+       "Seconded (Labour)                                       1\n",
+       "Seconded (Economic Development and Innovation)*         1\n",
+       "Seconded (Citizenship & Immigration)*                   1\n",
        "Name: Sector, Length: 74, dtype: int64"
       ]
      },
@@ -368,17 +368,17 @@
     {
      "data": {
       "text/plain": [
-       "Ontario Power Generation                                129110\n",
-       "University of Toronto                                    47240\n",
-       "City of Toronto                                          46561\n",
-       "City of Toronto - Police Service                         36985\n",
-       "Hydro One                                                32331\n",
-       "                                                         ...  \n",
-       "E3 (Educate, Enable, Empower) Community Services Inc         1\n",
-       "Interactive Niagara Media Cluster                            1\n",
-       "Board of Health for Simcoe Muskoka                           1\n",
-       "Ajax & Pickering Gen. Hospital                               1\n",
-       "Brant County Board of Education                              1\n",
+       "Ontario Power Generation              129110\n",
+       "University of Toronto                  47240\n",
+       "City of Toronto                        46561\n",
+       "City of Toronto - Police Service       36985\n",
+       "Hydro One                              32331\n",
+       "                                       ...  \n",
+       "Dunara Homes for Recovery Inc.             1\n",
+       "United Church of Canada in Ontario         1\n",
+       "C.A.S.- Niagara Region                     1\n",
+       "Timiskaming C&FS                           1\n",
+       "HeartHouse Hospice Inc                     1\n",
        "Name: Employer, Length: 8305, dtype: int64"
       ]
      },
@@ -470,17 +470,17 @@
     {
      "data": {
       "text/plain": [
-       "Professor                                                                                                                                                                                                                         64251\n",
-       "Associate Professor                                                                                                                                                                                                               43012\n",
-       "Registered Nurse                                                                                                                                                                                                                  29904\n",
-       "Constable                                                                                                                                                                                                                         27450\n",
-       "Police Constable                                                                                                                                                                                                                  23263\n",
-       "                                                                                                                                                                                                                                  ...  \n",
-       "Executive Asst., Office of the President                                                                                                                                                                                              1\n",
-       "Police Costable                                                                                                                                                                                                                       1\n",
-       "Privacy Specialist - Strategic Projects / Spécialiste de la Confidentialité - Projets Stratégiques                                                                                                                                    1\n",
-       "Associate Professor/ Director, Centre For Studies In Arts And Culture                                                                                                                                                                 1\n",
-       "Professor and Canada Research Chair Tier 1 - Biomedical and Molecular Science, Director (Centre for Neuroscience Studies) - Office of Vice-Principal (Research), Director (Neurosciences Program) - Faculty of Health Sciences        1\n",
+       "Professor                                                                                                  64251\n",
+       "Associate Professor                                                                                        43012\n",
+       "Registered Nurse                                                                                           29904\n",
+       "Constable                                                                                                  27450\n",
+       "Police Constable                                                                                           23263\n",
+       "                                                                                                           ...  \n",
+       "Manager, Information Technology Operations / Gestionnaire - Opérations de technologies de l’information        1\n",
+       "Sr. Mgr., Strategic Srvcs & Projects                                                                           1\n",
+       "Assoc. Dir., Fac., Eng. & Constr.                                                                              1\n",
+       "Dean, School of Business Hospitality and Media Arts                                                            1\n",
+       "Commissioner, Community Dev. Srvcs.                                                                            1\n",
        "Name: Job Title, Length: 166161, dtype: int64"
       ]
      },
@@ -618,102 +618,102 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>847125</th>\n",
-       "      <td>Municipalitites</td>\n",
-       "      <td>Byard</td>\n",
-       "      <td>trevor</td>\n",
-       "      <td>107144.96</td>\n",
-       "      <td>524.28</td>\n",
-       "      <td>Regional Municipality of York - Police Services</td>\n",
-       "      <td>Police Constable</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>trevor</td>\n",
-       "      <td>trevor</td>\n",
+       "      <th>1015383</th>\n",
+       "      <td>Post Secondary</td>\n",
+       "      <td>Jones</td>\n",
+       "      <td>bruce</td>\n",
+       "      <td>164530.62</td>\n",
+       "      <td>102.60</td>\n",
+       "      <td>University of Western Ontario</td>\n",
+       "      <td>Professor</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>bruce</td>\n",
+       "      <td>bruce</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>122427</th>\n",
-       "      <td>Municipalitites</td>\n",
-       "      <td>MONTPELLIER</td>\n",
-       "      <td>maurice</td>\n",
-       "      <td>113188.65</td>\n",
-       "      <td>4759.46</td>\n",
-       "      <td>City of Greater Sudbury</td>\n",
-       "      <td>Director</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>maurice</td>\n",
-       "      <td>maurice</td>\n",
+       "      <th>1353075</th>\n",
+       "      <td>Hospitals</td>\n",
+       "      <td>Takacs</td>\n",
+       "      <td>mary ann</td>\n",
+       "      <td>108558.63</td>\n",
+       "      <td>518.07</td>\n",
+       "      <td>Thunder Bay Regional Health Sciences Centre</td>\n",
+       "      <td>Nurse</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>mary ann</td>\n",
+       "      <td>mary ann</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>747533</th>\n",
-       "      <td>Public Sector</td>\n",
-       "      <td>Mendes Gomes</td>\n",
-       "      <td>marcio</td>\n",
-       "      <td>200799.61</td>\n",
-       "      <td>579.64</td>\n",
-       "      <td>Eastern Ontario Regional Lab Association</td>\n",
-       "      <td>Pathologist / Pathologiste</td>\n",
+       "      <th>1008377</th>\n",
+       "      <td>Post Secondary</td>\n",
+       "      <td>Toste</td>\n",
+       "      <td>alda</td>\n",
+       "      <td>101570.19</td>\n",
+       "      <td>310.92</td>\n",
+       "      <td>Ryerson University</td>\n",
+       "      <td>Manager Operations Support</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>alda</td>\n",
+       "      <td>alda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>770601</th>\n",
+       "      <td>Post Secondary</td>\n",
+       "      <td>Bozec</td>\n",
+       "      <td>richard</td>\n",
+       "      <td>158942.72</td>\n",
+       "      <td>44.55</td>\n",
+       "      <td>University of Ottawa</td>\n",
+       "      <td>Professor</td>\n",
        "      <td>2014</td>\n",
-       "      <td>marcio</td>\n",
-       "      <td>marcio</td>\n",
+       "      <td>richard</td>\n",
+       "      <td>richard</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>802570</th>\n",
-       "      <td>Government of Ontario</td>\n",
-       "      <td>Savard</td>\n",
-       "      <td>brian</td>\n",
-       "      <td>139722.08</td>\n",
-       "      <td>219.55</td>\n",
-       "      <td>Treasury Board Secretariat</td>\n",
-       "      <td>Portfolio Lead / Responsable de portefeuille</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>brian</td>\n",
-       "      <td>brian</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>555076</th>\n",
-       "      <td>Schools</td>\n",
-       "      <td>BISCHOFF</td>\n",
-       "      <td>andy</td>\n",
-       "      <td>107236.67</td>\n",
-       "      <td>200.16</td>\n",
-       "      <td>York Region District School Board</td>\n",
-       "      <td>Manager, Network Services</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>andy</td>\n",
-       "      <td>andy</td>\n",
+       "      <th>750021</th>\n",
+       "      <td>Public Sector</td>\n",
+       "      <td>Meagher</td>\n",
+       "      <td>suzanne</td>\n",
+       "      <td>109586.76</td>\n",
+       "      <td>2137.40</td>\n",
+       "      <td>Surrey Place Centre</td>\n",
+       "      <td>Director</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>suzanne</td>\n",
+       "      <td>suzanne</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Sector     Last Name First Name  Salary Paid  \\\n",
-       "847125        Municipalitites         Byard     trevor    107144.96   \n",
-       "122427        Municipalitites   MONTPELLIER    maurice    113188.65   \n",
-       "747533          Public Sector  Mendes Gomes     marcio    200799.61   \n",
-       "802570  Government of Ontario        Savard      brian    139722.08   \n",
-       "555076                Schools      BISCHOFF       andy    107236.67   \n",
+       "                 Sector Last Name First Name  Salary Paid  Taxable Benefits  \\\n",
+       "1015383  Post Secondary     Jones      bruce    164530.62            102.60   \n",
+       "1353075       Hospitals    Takacs   mary ann    108558.63            518.07   \n",
+       "1008377  Post Secondary     Toste       alda    101570.19            310.92   \n",
+       "770601   Post Secondary     Bozec   richard     158942.72             44.55   \n",
+       "750021    Public Sector   Meagher    suzanne    109586.76           2137.40   \n",
        "\n",
-       "        Taxable Benefits                                         Employer  \\\n",
-       "847125            524.28  Regional Municipality of York - Police Services   \n",
-       "122427           4759.46                          City of Greater Sudbury   \n",
-       "747533            579.64         Eastern Ontario Regional Lab Association   \n",
-       "802570            219.55                       Treasury Board Secretariat   \n",
-       "555076            200.16                York Region District School Board   \n",
+       "                                            Employer  \\\n",
+       "1015383                University of Western Ontario   \n",
+       "1353075  Thunder Bay Regional Health Sciences Centre   \n",
+       "1008377                           Ryerson University   \n",
+       "770601                          University of Ottawa   \n",
+       "750021                           Surrey Place Centre   \n",
        "\n",
-       "                                           Job Title  Calendar Year  \\\n",
-       "847125                              Police Constable           2015   \n",
-       "122427                                      Director           2005   \n",
-       "747533                    Pathologist / Pathologiste           2014   \n",
-       "802570  Portfolio Lead / Responsable de portefeuille           2015   \n",
-       "555076                     Manager, Network Services           2012   \n",
+       "                          Job Title  Calendar Year clean_first_name  \\\n",
+       "1015383                   Professor           2016            bruce   \n",
+       "1353075                       Nurse           2019         mary ann   \n",
+       "1008377  Manager Operations Support           2016             alda   \n",
+       "770601                    Professor           2014         richard    \n",
+       "750021                     Director           2014          suzanne   \n",
        "\n",
-       "       clean_first_name clean_alt_first_name  \n",
-       "847125           trevor               trevor  \n",
-       "122427          maurice              maurice  \n",
-       "747533           marcio               marcio  \n",
-       "802570            brian                brian  \n",
-       "555076             andy                 andy  "
+       "        clean_alt_first_name  \n",
+       "1015383                bruce  \n",
+       "1353075             mary ann  \n",
+       "1008377                 alda  \n",
+       "770601              richard   \n",
+       "750021               suzanne  "
       ]
      },
      "execution_count": 18,
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "4e1a1308",
    "metadata": {},
    "outputs": [],
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "38ae0ac2",
    "metadata": {},
    "outputs": [],
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "4d5c4f3f",
    "metadata": {},
    "outputs": [],
@@ -1081,6 +1081,7 @@
     "sunshine_data_df = sunshine_data_df.reindex(columns=['Calendar Year',\n",
     "                                                     'Sector' ,\n",
     "                                                     'Employer',\n",
+    "#                                                      'City',\n",
     "                                                     'Job Title',\n",
     "                                                     'last_first_name',\n",
     "                                                     'Last Name',\n",
@@ -1097,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "1de6ce10",
    "metadata": {},
    "outputs": [],
@@ -1106,6 +1107,7 @@
     "sunshine_data_df.rename({'Calendar Year':'year',\n",
     "                      'Sector':'sector',\n",
     "                      'Employer': 'employer',\n",
+    "#                          'City':'city',\n",
     "                      'Job Title':'job_title',\n",
     "                      'Last_First_Name':'last_first_name',\n",
     "                      'Last Name': 'last_name',\n",
@@ -1122,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "ae0fb59a",
    "metadata": {},
    "outputs": [
@@ -1283,7 +1285,7 @@
        "4            114832.0  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "ed04becb",
    "metadata": {},
    "outputs": [
@@ -1320,7 +1322,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
