Adding final Files

--- a/StatsCan_Ontario_cleansing.ipynb
+++ b/StatsCan_Ontario_cleansing.ipynb
@@ -19,7 +19,7 @@
     "import pandas as pd\n",
     "\n",
     "from sqlalchemy import create_engine\n",
-    "from config import db_password\n",
+    "# from config import db_password\n",
     "from getpass import getpass"
    ]
   },
@@ -1943,18 +1943,6 @@
    ],
    "source": [
     "Ontario_Wages.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "75a11da5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Export to csv \n",
-    "# Ontario_Wages.to_csv(\"Resources/Clean_Ontario_Wages.csv\", index=False)\n",
-    "# Ontario_Wages.head()"
    ]
   },
   {
